# tidb-vector-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
examples/: README.md
examples/dspy-demo/: .env.example  README.md  example.py  requirements.txt  sample_data.txt  test.py  utils.py
examples/gemini-ai-embeddings-demo/: README.md  example.ipynb  example.py  requirements.txt
examples/graphrag-10-lines-core-code/: README.md
examples/graphrag-demo/: README.md  init.sql  requirements.txt  simple-retrieve.py
examples/graphrag-helloworld/: README.md
examples/graphrag-simple-retrieve/: README.md
examples/graphrag-step-by-step-tutorial/: README.md  example.ipynb
examples/graphrag-step-by-step-tutorials/: README.md
examples/image_search/: README.md  example.ipynb
examples/jina-ai-embeddings-demo/: README.md  jina-ai-embeddings-demo.py  requirements.txt
examples/langchain-agent-demo/: README.md  example.py  knowledge_base.py  requirements.txt  utils.py
examples/llamaindex-tidb-vector/: README.md  app.py  chat_with_url.py  requirements.txt  talk_to_url.py
examples/llamaindex-tidb-vector-with-ui/: README.md  app.py  requirements.txt
examples/llamaindex_rag/: README.md  app.py  example.py
examples/openai_embedding/: README.md  example.ipynb  example.py  requirements.txt
examples/orm-django-quickstart/: .env.example  README.md  requirements.txt
examples/orm-peewee-quickstart/: .env.example  README.md  peewee-quickstart.py  requirements.txt
examples/orm-sqlalchemy-quickstart/: .env.example  README.md  requirements.txt  sqlalchemy-quickstart.py
examples/python-client-quickstart/: .env.example  README.md  example.py  requirements.txt
examples/semantic-cache/: README.md  cache.py  requirements.txt
tests/: config.py
tests/integrations/: test_utils.py  test_vector_client.py  test_vectorstore.py
tests/peewee/: test_peewee.py
tidb_vector/: __init__.py  constants.py  utils.py
(+28 files in other folders)
