[tool.poetry]
name = "tidbvec"
version = "0.0.6"
description = ""
authors = ["IANTHEREAL <argregoryian@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "tidb_vector"}]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
SQLAlchemy = ">=1.4,<3"
numpy = "^1"

[tool.poetry.group.test.dependencies]
# The only dependencies that should be added are
# dependencies used for running tests.
# Any dependencies that do not meet that criteria will be removed.
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
