[tool.poetry]
name = "tidb-vector"
# this version is usless, now read the version from __init__.py
version = "0.0.0"
description = "A Python client for TiDB Vector"
authors = ["IANTHEREAL <argregoryian@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "tidb_vector"}]

[tool.poetry-version-plugin]
source = "init"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
numpy = "^1"
SQLAlchemy = {version = ">=1.4,<3", optional = true}

[tool.poetry.extras]
client = ["SQLAlchemy"]

[tool.poetry.group.test.dependencies]
# The only dependencies that should be added are
# dependencies used for running tests.
# Any dependencies that do not meet that criteria will be removed.
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
